--- a/attorney_info_review.html
+++ b/attorney_info_review.html
@@ -193,7 +193,7 @@
                                                         <div class="col-xs-12 col-lg-7">
                                                             <div class="row">
                                                                 <div class="col-xs-12">
-                                                                    <p class="panel-title number weight600"><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#areid" aria-controls="areid" aria-expanded="false" id="areidbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Attorney Avo Z. Reid, Esquire</button></p>
+                                                                    <p class="panel-title number weight600"><span class="glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#areid" aria-hidden="true"></span><span class="glyphicon glyphicon-triangle-bottom" data-toggle="collapse" data-target="#areid" aria-hidden="true"></span><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#areid" aria-controls="areid" aria-expanded="false" id="areidbtn"> Attorney Avo Z. Reid, Esquire</button><br clear="all"></p>
                                                                 </div>
                                                                 <div class="col-xs-12 email">
                                                                     <p>avo.reid@us.gt.com</p>
@@ -370,7 +370,7 @@
                                                         <div class="col-xs-12 col-lg-7">
                                                             <div class="row">
                                                                 <div class="col-xs-12">
-                                                                    <p class="panel-title number weight600"><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#jgold" aria-controls="jgold" aria-expanded="false" id="jgoldbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Attorney Jacob Y. Goldstein, Esquire</button></p>
+                                                                    <p class="panel-title number weight600"><span class="glyphicon glyphicon-triangle-right"  data-toggle="collapse" data-target="#jgold" aria-hidden="true"></span><span class="glyphicon glyphicon-triangle-bottom" data-toggle="collapse" data-target="#jgold" aria-hidden="true"></span><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#jgold" aria-controls="jgold" aria-expanded="false" id="jgoldbtn"> Attorney Jacob Y. Goldstein, Esquire</button></p>
                                                                 </div>
                                                                 <div class="col-xs-12 email">
                                                                     <p>jacob.goldstein@us.gt.com</p>
