--- a/owner_info_review.html
+++ b/owner_info_review.html
@@ -193,7 +193,7 @@
                                                         <div class="col-xs-9 col-md-10">
                                                             <div class="row">
                                                                 <div class="col-xs-12 col-md-4">
-                                                                    <p class="panel-title number weight600"><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#jbabos" aria-controls="jbabos" aria-expanded="false" id="jbabosbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Jackie Babos</button></p>
+                                                                    <p class="panel-title number weight600"><span class="glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#jbabos" aria-hidden="true"></span><span class="glyphicon glyphicon-triangle-bottom" data-toggle="collapse" data-target="#jbabos" aria-hidden="true"></span><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#jbabos" aria-controls="jbabos" aria-expanded="false" id="jbabosbtn"> Jackie Babos</button><br clear="all"></p>
                                                                 </div>
                                                                 <div class="col-xs-12 col-md-5 email">
                                                                     <p>jackie.babos@us.gt.com</p>
@@ -369,7 +369,7 @@
                                                         <div class="col-xs-9 col-md-10">
                                                             <div class="row">
                                                                 <div class="col-xs-12 col-md-4">
-                                                                    <p class="panel-title number weight600"><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#jgold" aria-controls="jgold" aria-expanded="false" id="jgoldbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Jacob Goldstein</button></p>
+                                                                    <p class="panel-title number weight600"><span class="glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#jgold" aria-hidden="true"></span><span class="glyphicon glyphicon-triangle-bottom" data-toggle="collapse" data-target="#jgold" aria-hidden="true"></span><button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#jgold" aria-controls="jgold" aria-expanded="false" id="jgoldbtn"> Jacob Goldstein</button><br clear="all"></p>
                                                                 </div>
                                                                 <div class="col-xs-12 col-md-5 email">
                                                                     <p>jacob.goldstein@us.gt.com</p>
