Status of updates to Local Files: Reference Only

--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -185,6 +185,11 @@
                         </div>
                     </div>
                     <div class="row">
+                    	<div class="col-xs-12 form-group form-group-md alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
+                          <p id="mintext"></p>
+                          <button type="button" class="close" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
+                          <br clear="all">
+                        </div>
                         <div class="col-xs-12" id="basisabde">
                                 <div class="leadtext">
                                     <p id="lead" class="weight600">Please provide information about each class you have selected for your mark.</p>
@@ -299,11 +304,6 @@
                                                                 <label class="form-check-label form-check" for="foreigntwo_basisone"><span class="radio notspecial" id="forregtwo">Foreign registration</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="natwo" tabindex="0" aria-labelledby="notapptwo" id="natwo_basisone">
                                                                 <label class="form-check-label form-check" for="natwo_basisone"><span class="radio notspecial" id="notapptwo">Not applicable</span></label>
-                                                            </div>
-                                                            <div class="col-xs-12 alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
-                                                              <p id="mintext"></p>
-                                                              <button type="button" class="close" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
-                                                              <br clear="all">
                                                             </div>
                                                             <div class="col-xs-12">
                                                                 <div class="row holdsapending" aria-labelledby="foreignapplication">
