User Profile + Creat Account Change Req.
Per demo and team feedback, updated last step button in both, copy change to headline in User Profile.

--- a/user_profile.html
+++ b/user_profile.html
@@ -88,7 +88,7 @@
             <!--START Content Div-->
             <div class="row">
                 <div class="col-xs-12 text-left">
-                    <h1 id="userprofile">User Profile</h1>
+                    <h1 id="userprofile">Edit Account Information</h1>
                     <p class="required"><span class="weight600">&#42; = Required</span></p>
                     <div class="row alert">
                         <div class="col-xs-12 col-sm-6 alert alert-warning" role="alert">
@@ -684,16 +684,13 @@
                        </form><!--END Additional Information Form-->
                 	</div><!--END Content Div-->
                   </div>
-                  <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
-                    </div>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
+                  <div class="row">
+                    <div class="col-xs-12" role="navigation" aria-label="proceed to next page" id="prevnxt">
+                        <button type="button" class="btn btn-sm btn-primary fill next right">Next
                             <div class="round">
-                            	<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
                             </div>
-                     	</button>
+                        </button>
                     </div>
                 </div>
         	</main><!--MAIN-->
