--- a/create_account.html
+++ b/create_account.html
@@ -154,12 +154,9 @@
                         </form><!--END Additional Information Form-->
                     </div><!--END Content Div-->
                   </div>
-                  <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
-                    </div>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-primary fill next" id="" value="next">Next 
+                  <div class="row">
+                    <div class="col-xs-12" role="navigation" aria-label="proceed to next page" id="prevnxt">
+                        <button type="button" class="btn btn-sm btn-primary fill next right">Next
                             <div class="round">
                                 <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
                             </div>
