--- a/landing_page.html
+++ b/landing_page.html
@@ -109,7 +109,7 @@
                                 
                                   <div class="maincontainer bottom">
                                     <div class="psw">
-                                        <p><a href="#">New</a> user? Forgot <a href="#">password?</a></p>
+                                        <p><a href="#">New user</a>? <a href="#">Forgot password</a>?</p>
                                     </div>
                                   </div>
                                 </fieldset>
