--- a/login_loginmodal.html
+++ b/login_loginmodal.html
@@ -116,7 +116,7 @@
                         
                           <div class="maincontainer bottom">
                             <div class="psw">
-                                <p><a href="#">New</a> user? Forgot <a href="#">password?</a></p>
+                                <p><a href="#">New user</a>? <a href="#">Forgot password</a>?</p>
                             </div>
                           </div>
                         </fieldset>
@@ -152,7 +152,7 @@
                             
                               <div class="maincontainer bottom">
                                 <div class="psw">
-                                    <p><a href="#">New</a> user? Forgot <a href="#">password?</a></p>
+                                    <p><a href="#">New user</a>? <a href="#">Forgot password</a>?</p>
                                 </div>
                               </div>
                             </fieldset>
