--- a/password_recovery.html
+++ b/password_recovery.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h1>Enter and Confirm New Password</h1>
-                    <p class="required">Having trouble? <a href="#" target="_blank">Contact<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a> us.</p>
+                    <!--<p class="required">Having trouble? <a href="#" target="_blank">Contact<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a> us.</p>-->
                     <p class="required"><span class="weight600">&#42; = Required</span></p>
                     <form method="post" action="" aria-labelledby="passwordetails">
                         <fieldset class="form-group form-group-md" aria-label="enter and confirm new password" id="newpsw">
