--- a/additional_information.html
+++ b/additional_information.html
@@ -242,7 +242,7 @@
                                         <section aria-label="Type of Register">
                                             <div class="card-text">
                                                 <div role="heading" aria-level="2">
-                                                <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#register" aria-controls="register" aria-expanded="false" id="registerbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Type of Register</button>
+                                                <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#register" aria-controls="register" aria-expanded="false" id="registerbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Type of Register</button>
                                                 </div>
                                             </div>
                                             <div id="register" class="collapse Accordion-panel" role="region" aria-labelledby="registerbtn">
@@ -273,7 +273,7 @@
                                             <fieldset aria-labelledby="distinctiveness">
                                                 <div class="card-text">
                                                     <div role="heading" aria-level="2">
-                                                    <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#distinctiveness" aria-controls="distinctiveness" aria-expanded="false" id="distinctivenessbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> 2(f) Claim of Acquired Distinctiveness</button>
+                                                    <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#distinctiveness" aria-controls="distinctiveness" aria-expanded="false" id="distinctivenessbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> 2(f) Claim of Acquired Distinctiveness</button>
                                                     </div>
                                                 </div>
                                                 <div id="distinctiveness" class="collapse Accordion-panel" role="region" aria-labelledby="distinctivenessbtn">
