--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -179,7 +179,7 @@
                     <!--START Attorney Information Form-->
                     <div class="card-text">
                     	<div role="heading" aria-level="2" id="attorneyinfo">
-                        	<button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#attorneyadvise" aria-controls="attorneyadvise" aria-expanded="false" id="attorneyadvisebtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyphcolor" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Attorney Information</button>
+                        	<button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#attorneyadvise" aria-controls="attorneyadvise" aria-expanded="false" id="attorneyadvisebtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Attorney Information</button>
                         </div>
                     </div>
                     <div id="attorneyadvise" class="collapse Accordion-panel" role="region" aria-labelledby="attorneyadvisebtn">
@@ -787,7 +787,7 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#collapse1" aria-controls="collapse1" aria-expanded="false" id="feebtn" aria-label="toggle fee panel"><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-top visuallyremoved" aria-hidden="true"></span> Total Fee</button>
+                                    <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse1" aria-controls="collapse1" aria-expanded="false" id="feebtn" aria-label="toggle fee panel"><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span><span class="glyphicon glyphicon-triangle-top visuallyremoved" aria-hidden="true"></span> Total Fee</button>
                                 </h4>
                                 <button type="button" id="closefee" class="close" data-target="#mydata" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                             </div>
@@ -806,7 +806,7 @@
                         <div class="panel panel-default">
                             <div class="panel-heading" id="contacts">
                                     <h4 class="panel-title">
-                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#collapse2" aria-controls="collapse2" aria-expanded="false" id="contactsbtn" aria-label="toggle contacts panel"><span id="toggleglyphone" class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-top visuallyremoved" aria-hidden="true"></span> Contacts</button>
+                                        <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse2" aria-controls="collapse2" aria-expanded="false" id="contactsbtn" aria-label="toggle contacts panel"><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span><span class="glyphicon glyphicon-triangle-top visuallyremoved" aria-hidden="true"></span> Contacts</button>
                                     </h4>
                                     <button type="button" id="closecontacts" class="close" data-target="#mydata2" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                             </div>
