--- a/dashboard.html
+++ b/dashboard.html
@@ -239,8 +239,8 @@
                                                                     <td tabindex="0"><img src="images/designonly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                                     <td tabindex="0">Lynn Stanikmas</td>
                                                                     <td tabindex="0">12/21/2019</td>
-                                                                    <td tabindex="0">Abandoned</td>
-                                                                    <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
+                                                                    <td tabindex="0">Non-final Action Issued</td>
+                                                                    <td tabindex="0"><a href="#">Respond to Office Action</a></td>
                                                                   </tr>
                                                                   <tr>
                                                                     <td tabindex="0">87697248</td>
