--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -182,7 +182,7 @@
                                                 <section aria-label="disclaimer">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#disclaimer" aria-controls="disclaimer" aria-expanded="false" id="disclaimerbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Disclaimer</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#disclaimer" aria-controls="disclaimer" aria-expanded="false" id="disclaimerbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Disclaimer</button>
                                                         </div>
                                                     </div>
                                                     <div id="disclaimer" class="collapse Accordion-panel" role="region" aria-labelledby="disclaimerbtn">
@@ -231,7 +231,7 @@
                                                 <section aria-label="Active Prior US Registration">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#prior" aria-controls="prior" aria-expanded="false" id="priorbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Active Prior US Registration</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#prior" aria-controls="prior" aria-expanded="false" id="priorbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Active Prior US Registration</button>
                                                         </div>
                                                     </div>
                                                     <div id="prior" class="collapse Accordion-panel" role="region" aria-labelledby="priorbtn">
@@ -273,7 +273,7 @@
                                                 <section aria-label="Meaning or Significance">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#meaning" aria-controls="meaning" aria-expanded="false" id="meanbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Meaning or Significance</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#meaning" aria-controls="meaning" aria-expanded="false" id="meanbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Meaning or Significance</button>
                                                         </div>
                                                     </div>
                                                     <div id="meaning" class="collapse Accordion-panel" role="region" aria-labelledby="meanbtn">
