--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -409,7 +409,7 @@
                                                     <div class="col-xs-12">
                                                         <div class="row">
                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                <label for="ta2" class="weight600">How are you signing the application?</label> 
+                                                                <label for="ta2">How are you signing the application?</label> 
                                                                 <select class="form-control signmethod" id="ta2"  onchange="showTheTime()">
                                                                     <option value="Select">Select Signature Method</option>
                                                                     <option value="direct">Sign directly</option>
