--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -191,7 +191,7 @@
                                                 <section aria-label="color claim">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        	<button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#colorclaim" aria-controls="colorclaim" aria-expanded="false" id="colorbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyphcolor" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Color Claim</button>
+                                                        	<button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#colorclaim" aria-controls="colorclaim" aria-expanded="false" id="colorbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Color Claim</button>
                                                         </div>
                                                     </div>
                                                     <div id="colorclaim" class="collapse Accordion-panel" role="region" aria-labelledby="colorbtn">
@@ -237,7 +237,7 @@
                                                 <section aria-label="translation">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#translation" aria-controls="translation" aria-expanded="false" id="translatesbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Translation</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#translation" aria-controls="translation" aria-expanded="false" id="translatesbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Translation</button>
                                                         </div>
                                                     </div>
                                                     <div id="translation" class="collapse Accordion-panel" role="region" aria-labelledby="translationbtn">
@@ -297,7 +297,7 @@
                                                 <section aria-label="transliteration">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#transliteration" aria-controls="transliteration" aria-expanded="false" id="translitbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Transliteration</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#transliteration" aria-controls="transliteration" aria-expanded="false" id="translitbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Transliteration</button>
                                                         </div>
                                                     </div>
                                                     <div id="transliteration" class="collapse Accordion-panel" role="region" aria-labelledby="translitbtn">
@@ -359,7 +359,7 @@
                                                 <section aria-label="name portrait signature">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#nps" aria-controls="nps" aria-expanded="false" id="npsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Name / Portrait / Signature</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#nps" aria-controls="nps" aria-expanded="false" id="npsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Name / Portrait / Signature</button>
                                                         </div>
                                                     </div>
                                                     <div id="nps" class="collapse Accordion-panel" role="region" aria-labelledby="npsbtn">
