--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -210,7 +210,7 @@
                                                 <section aria-label="color claim">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#colorclaim" aria-controls="colorclaim" aria-expanded="false" id="colorbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyphcolor" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Color Claim</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#colorclaim" aria-controls="colorclaim" aria-expanded="false" id="colorbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Color Claim</button>
                                                         </div>
                                                     </div>
                                                     <div id="colorclaim" class="collapse Accordion-panel" role="region" aria-labelledby="colorbtn">
@@ -255,7 +255,7 @@
                                                 <section aria-label="name portrait signature">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#nps" aria-controls="nps" aria-expanded="false" id="npsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Name / Portrait / Signature</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#nps" aria-controls="nps" aria-expanded="false" id="npsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Name / Portrait / Signature</button>
                                                         </div>
                                                     </div>
                                                     <div id="nps" class="collapse Accordion-panel" role="region" aria-labelledby="npsbtn">
