--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -166,7 +166,7 @@
                             <!--START Application Type-->
                                     <div class="card-text">
                                         <div role="heading" aria-level="2">
-                                            <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#marktype" aria-controls="marktype" aria-expanded="false" id="marktypebtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyphcolor" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Mark Type</button>
+                                            <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#marktype" aria-controls="marktype" aria-expanded="false" id="marktypebtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Mark Type</button>
                                         </div>
                                     </div>
                                     <div id="marktype" class="collapse Accordion-panel" role="region" aria-labelledby="marktypebtn">
@@ -182,7 +182,7 @@
                                         <label class="form-check-label form-check" for="tradeserv" id="tradeserv2"><span class="radio notspecial">Trademark / Servicemark</span></label>
                                     </div>
                                     <div role="heading" aria-level="3">
-                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#markoptions" aria-controls="markoptions" aria-expanded="false" id="optionsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span  class="toggleglyph glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Expand for uncommon mark types</button>
+                                        <button type="button" class="btn btn-link Accordion-trigger ablock" data-toggle="collapse" data-target="#markoptions" aria-controls="markoptions" aria-expanded="false" id="optionsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Expand for uncommon mark types</button>
                                     </div>
                                     <div id="markoptions" class="collapse Accordion-panel" role="region" aria-labelledby="optionsbtn">
                                         <div class="Accordion form-group form-group-md">
