--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -206,7 +206,7 @@
                                                 <section aria-label="translation">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#translation" aria-controls="translation" aria-expanded="false" id="translatesbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Translation</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#translation" aria-controls="translation" aria-expanded="false" id="translatesbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Translation</button>
                                                         </div>
                                                     </div>
                                                     <div id="translation" class="collapse Accordion-panel" role="region" aria-labelledby="translationbtn">
@@ -266,7 +266,7 @@
                                                 <section aria-label="name portrait signature">
                                                     <div class="card-text">
                                                         <div role="heading" aria-level="2">
-                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#nps" aria-controls="nps" aria-expanded="false" id="npsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Name / Portrait / Signature</button>
+                                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#nps" aria-controls="nps" aria-expanded="false" id="npsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Name / Portrait / Signature</button>
                                                         </div>
                                                     </div>
                                                     <div id="nps" class="collapse Accordion-panel" role="region" aria-labelledby="npsbtn">
