--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -186,7 +186,7 @@
                         	<section aria-label="entity type">
                                 <div class="card-text">
                                     <div role="heading" aria-level="2">
-                                    <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#entitype" aria-controls="entitype" aria-expanded="false" id="entbtn"><span class="glyphicon glyphicon-triangle-right"></span><span id="toggleglyphcolor" class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Entity Type</button>
+                                    <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#entitype" aria-controls="entitype" aria-expanded="false" id="entbtn"><span class="glyphicon glyphicon-triangle-right"></span><span class="glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Entity Type</button>
                                     </div>
                                 </div>
                                 <div id="entitype" class="collapse Accordion-panel" role="region" aria-labelledby="entbtn">
@@ -332,7 +332,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#collapse1" aria-controls="collapse1" aria-expanded="false" id="feebtn" aria-label="toggle fee panel"><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-top visuallyremoved" aria-hidden="true"></span> Total Fee</button>
+                                <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse1" aria-controls="collapse1" aria-expanded="false" id="feebtn" aria-label="toggle fee panel"><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span><span class="glyphicon glyphicon-triangle-top visuallyremoved" aria-hidden="true"></span> Total Fee</button>
                             </h4>
                             <button type="button" id="closefee" class="close" data-target="#mydata" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                         </div>
@@ -351,7 +351,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading" id="contacts">
                                 <h4 class="panel-title">
-                                    <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#collapse2" aria-controls="collapse2" aria-expanded="false" id="contactsbtn" aria-label="toggle contacts panel"><span id="toggleglyphone" class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span><span id="toggleglyph" class="glyphicon glyphicon-triangle-top visuallyremoved" aria-hidden="true"></span> Contacts</button>
+                                    <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse2" aria-controls="collapse2" aria-expanded="false" id="contactsbtn" aria-label="toggle contacts panel"><span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span><span class="glyphicon glyphicon-triangle-top visuallyremoved" aria-hidden="true"></span> Contacts</button>
                                 </h4>
                                 <button type="button" id="closecontacts" class="close" data-target="#mydata2" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                         </div>
