--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -406,7 +406,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/RetinaIcon_1.svg" alt="graphical representation of a 3-dimensional cube" class="img-responsive"> 
+                                                                        <img src="images/RetinaIcon_1.svg" role="image" alt="graphical representation of a 3-dimensional cube" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -425,7 +425,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/RetinaIcon_2.svg" alt="graphical representation of a 3-dimensional cube with a letter a" class="img-responsive"> 
+                                                                        <img src="images/RetinaIcon_2.svg" role="image" alt="graphical representation of a 3-dimensional cube with a letter a" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -446,7 +446,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/PixleIcon_1.svg" alt="graphical image of a speaker in use" class="img-responsive"> 
+                                                                        <img src="images/PixleIcon_1.svg" role="image" alt="graphical image of a speaker in use" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -465,7 +465,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/PixleIcon_2.svg" alt="graphical image of a musical note" class="img-responsive"> 
+                                                                        <img src="images/PixleIcon_2.svg" role="image" alt="graphical image of a musical note" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
