--- a/dashboard.html
+++ b/dashboard.html
@@ -382,8 +382,13 @@
 	<!--<script type="application/javascript" src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.colVis.min.js"></script>-->
     <!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
     <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script type="application/javascript" src="js/browser-detect.umd.js"></script>
    	<script type="application/javascript" src="js/tab_panels.js"></script>
     <script type="application/javascript" src="js/lynnjqueryscript.js"></script>
+    <script>
+const result = browserDetect();
+console.log(result);
+</script>
     <footer>
         <div class="container-fluid">
             <div class="row">
