--- a/marks_design_with_text_M3.html
+++ b/marks_design_with_text_M3.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html th:fragment="layout (template, menu)" lang="en" xml:lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Trademark Design with Text - File Upload</title>
+    <title>Trademark Design with Text - File Upload :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -24,7 +23,6 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/lynnstyles.css">
 </head>
-
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
@@ -217,8 +215,8 @@
                                       <p id="typemark">Upload a file containing your mark. <span class="weight600">&#42;</span></p>						
                                         <!--Start Dropzone-->
                                       <div class="row">
-                                          <div class="col-xs-12 form-group form-group-md">
-                                            <form action="" method="post" enctype="multipart/form-data" aria-labelledby="markinfo">
+                                          <div class="col-xs-12">
+                                            <form action="upload" enctype="multipart/form-data" method="post" aria-labelledby="markinfo">
                                                 <fieldset>
                                                     <legend class="sr-only"><span>File upload</span></legend>
                                                     <div class="form-group form-group-md hidethis">
@@ -227,19 +225,20 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="js-upload-finished col-xs-12">
-                                                            <p id="uploadedfile">Selected files</p>
+                                                            <!--<p id="uploadedfile">Selected files</p>-->
                                                             <div class="list-group" id="filedata">
                                                                 <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                             </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row">
-                                                        <div class="col-xs-12">
-                                                            <div class="col-xs-12 form-group form-group-md">
-                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected images">Submit</button>
+                                                            <div class="row">
+                                                                <div class="col-xs-12">
+                                                                    <div class="col-xs-12 form-group form-group-md">
+                                                                        <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected images">Upload File</button>
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                         </div>
-                                                    </div><!-- Drop Zone -->
+                                                    </div>
+                                                    <!-- Drop Zone -->
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -275,6 +274,7 @@
     <!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
     <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="js/lynnjqueryscript.js"></script>
+    <!--<script src="https://cdn.rawgit.com/seikichi/tiff.js/master/tiff.min.js"></script>-->
     <footer>
         <div class="container-fluid">
             <div class="row">
