--- a/ROA_declaration_signature.html
+++ b/ROA_declaration_signature.html
@@ -218,8 +218,7 @@
                                                             <div class="col-xs-12 form-group form-group-md">
                                                                 <div class="row">
                                                                     <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
-                                                                        <p class="sr-only">Enclose the signature in forward slashes</p>
-                                                                        <label for="signature">Signature <span class="weight600">&#42;</span></label>
+                                                                        <label for="signature">Signature <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="To electronically sign the application enter any combination of alpha numeric characters between two forward slash symbols (/); e.g., /jane smith/, /rdr/, or /127/)."></a></label>
                                                                         <input type="text" class="form-control" placeholder="/Signature/" id="signature" required>
                                                                     </div>
                                                                     <script type="application/javascript" src="js/timestamp.js"></script>
