--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
     <title>USPTO.gov :: webapp prototype :: Dashboard</title>
-
+  	<script type="application/javascript" src="js/ie_alert.js"></script>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -34,6 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <body onload="ShowIEAlert()">
           <a class="navbar-brand" href="http://www.uspto.gov"><img src="images/logo_top.png" alt="US Trade and Patent Office logo"></a>
         </div>
     
@@ -136,6 +137,11 @@
               <div class="row">
                 <div class="col-xs-12" id="dashsectionscontainer">
                     <h1>eFile Homepage</h1>
+                    	<div class="col-xs-12 form-group form-group-md alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
+                          <p id="mintext"></p>
+                          <button type="button" class="close" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
+                          <br clear="all">
+                        </div>
                         <div class="row">
                             <div class="col-xs-12 form-group form-group-md" id="dashboard">
                                 <div class="row">
@@ -384,10 +390,6 @@
     <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
    	<script type="application/javascript" src="js/tab_panels.js"></script>
     <script type="application/javascript" src="js/lynnjqueryscript.js"></script>
-    <script>
-const result = browserDetect();
-console.log(result);
-</script>
     <footer>
         <div class="container-fluid">
             <div class="row">
